--- a/pykd/packages.pykd_vc120.config
+++ b/pykd/packages.pykd_vc120.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="boost" version="1.57.0.0" targetFramework="Native" />
+  <package id="boost_chrono" version="1.57.0.0" targetFramework="Native" />
+  <package id="boost_date_time" version="1.57.0.0" targetFramework="Native" />
   <package id="boost_python" version="1.57.0.0" targetFramework="Native" />
+  <package id="boost_system" version="1.57.0.0" targetFramework="Native" />
+  <package id="boost_thread" version="1.57.0.0" targetFramework="Native" />
   <package id="Python27" version="2.7.6" targetFramework="Native" />
 </packages>
