--- a/pykd/pykd_vc110.vcxproj.filters
+++ b/pykd/pykd_vc110.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="pyevents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pyprocess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
