[0.3.x] added : getNumberBreakpoint, breakpoints methods
git-svn-id: https://pykd.svn.codeplex.com/svn@89668 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_vc120.vcxproj
+++ b/pykd/pykd_vc120.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="pykdver.h" />
     <ClInclude Include="pymemaccess.h" />
     <ClInclude Include="pymodule.h" />
+    <ClInclude Include="pyprocess.h" />
     <ClInclude Include="pysymengine.h" />
     <ClInclude Include="pythreadstate.h" />
     <ClInclude Include="pytypedvar.h" />
