[pykd_bootstrapper] added : resource info
git-svn-id: https://pykd.svn.codeplex.com/svn@90384 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd_bootstrapper/pykd_bootstrapper_vc120.vcxproj
+++ b/pykd_bootstrapper/pykd_bootstrapper_vc120.vcxproj
@@ -169,8 +169,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="version.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -203,6 +205,9 @@
     <ProjectReference Include="..\kdlibcpp\source\kdlib_vc120.vcxproj">
       <Project>{3e9c538f-f060-4e86-ab7d-d44439615b63}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="version.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
