[0.3.x] added : targetSystem.processes()  (return list of processes for the target system) [0.3.x] added : targetProcess.threads() (return list of threads for the target process) [0.3.x] added : targetProcess.modules() (return list of modules for the target process) [0.3.x] added : targetProcess.breakpoints() (return list of breakpoints for the target process) [0.3.x] added : targetProcess.stack() (return the thread's stack trace)
git-svn-id: https://pykd.svn.codeplex.com/svn@90885 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_vc120.vcxproj.filters
+++ b/pykd/pykd_vc120.vcxproj.filters
@@ -242,6 +242,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\boost_chrono.thread_clock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pyprocess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="pykd.def">
