--- a/pykd/pykd_vc120.vcxproj
+++ b/pykd/pykd_vc120.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="pymemaccess.cpp" />
     <ClCompile Include="pymod.cpp" />
     <ClCompile Include="pymodule.cpp" />
+    <ClCompile Include="pyprocess.cpp" />
     <ClCompile Include="pytypedvar.cpp" />
     <ClCompile Include="pytypeinfo.cpp" />
     <ClCompile Include="stdafx.cpp">
